--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Deploy to Server
       run: |
-        ssh -o StrictHostKeyChecking=no deploy@prophesierc.site << 'EOF'
+        ssh -v -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@prophesierc.site << 'EOF'
           cd /var/www/prophesierc.site/prophesierc/
           git pull origin main
           sudo systemctl restart nginx
