--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,10 @@ jobs:
 
       - name: Deploy to Server
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@prophesierc.site << 'EOF'
-            cd /var/www/prophesierc.site/prophesierc/
-            git pull origin main
-            sudo systemctl restart nginx
+          ssh -i /home/deploy/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@prophesierc.site << 'EOF'
+          cd /var/www/prophesierc.site/prophesierc/
+          git pull origin main
+          sudo systemctl restart nginx
           EOF
+
+
