--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,8 @@ jobs:
 
       - name: Deploy to Server
         run: |
-          ssh -i /home/deploy/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@prophesierc.site << 'EOF'
+          ssh -v -i /home/deploy/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@prophesierc.site << 'EOF'
           cd /var/www/prophesierc.site/prophesierc/
           git pull origin main
           sudo systemctl restart nginx
           EOF
-
-
