--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,20 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Set up SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H prophesierc.site >> ~/.ssh/known_hosts
 
-      - name: Set up SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H prophesierc.site >> ~/.ssh/known_hosts
+    - name: Deploy to Server
+      run: |
+        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@prophesierc.site << 'EOF'
+        cd /path/to/your/app
+        git pull origin main
+        sudo systemctl restart nginx
+        EOF
 
-      - name: Deploy to Server
-        run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@prophesierc.site << 'EOF'
-          cd /var/www/prophesierc.site/prophesierc/
-          git pull origin main
-          sudo systemctl restart nginx
-          EOF
