--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,28 +3,21 @@ name: Deploy to Server
 on:
   push:
     branches:
-      - main 
+      - main  
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install SSH Client
-        run: |
-          sudo apt update
-          sudo apt install openssh-client
-
-      - name: Deploy via SSH
+      - name: Copy files to server
         uses: appleboy/scp-action@master
         with:
+          source: "." 
+          target: "/var/www/prophesierc.site/prophesierc/"
           host: prophesierc.site
           username: deploy
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "prophesierc"
-          target: "/var/www/prophesierc.site/prophesierc/"  
-          strip-components: 1
-          port: 22
