--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           source: "." 
-          target: "/var/www/prophesierc.site/prophesierc/"
+          target: "/var/www/prophesierc.site/prophesierc/contact-form"
           host: prophesierc.site
           username: deploy
           key: ${{ secrets.SSH_PRIVATE_KEY }}
