--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,23 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Add a debugging step to print environment variables
-      - name: Debug GitHub Actions Environment
-        run: |
-          env | sort
-
-      # Print contents of the target directory on the remote server
-      - name: List Remote Directory
-        run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} deploy@prophesierc.site ls -la /var/www/prophesierc.site/prophesierc/contact-form
-
-      - name: Copy files to server
-        uses: appleboy/scp-action@master
-        with:
-          source: "." 
-          target: "/var/www/prophesierc.site/prophesierc/contact-form"
-          host: prophesierc.site
-          username: deploy
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+  - name: Debug SSH Key
+    run: echo "${{ secrets.SSH_PRIVATE_KEY }}"
+  - name: Copy files to server
+    uses: appleboy/scp-action@master
+    with:
+      source: "."
+      target: "/var/www/prophesierc.site/prophesierc/contact-form"
+      host: prophesierc.site
+      username: deploy
+      key: ${{ secrets.SSH_PRIVATE_KEY }}
