--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,13 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-  - name: Debug SSH Key
-    run: echo "${{ secrets.SSH_PRIVATE_KEY }}"
-  - name: Copy files to server
-    uses: appleboy/scp-action@master
-    with:
-      source: "."
-      target: "/var/www/prophesierc.site/prophesierc/contact-form"
-      host: prophesierc.site
-      username: deploy
-      key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Copy files to server
+        uses: appleboy/scp-action@master
+        with:
+          source: "." 
+          target: "/var/www/prophesierc.site/prophesierc/contact-form"
+          host: prophesierc.site
+          username: deploy
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
